--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
   <title>Adam_D'H7</title>
 
   <link rel="manifest" href="manifest.json" />
-  <meta name="theme-color" content="#000000" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Adam_D'H7" />
+
+  <!-- Favicon / Apple PWA icon (URL absolu san slash prezan) -->
+  <link rel="icon" href="https://res.cloudinary.com/dckwrqrur/image/upload/v1757205404/tf-stream-url/Screenshot_20250906_202106_Chrome_go9vhu.png" type="image/png" />
   <link rel="apple-touch-icon" href="https://res.cloudinary.com/dckwrqrur/image/upload/v1757205404/tf-stream-url/Screenshot_20250906_202106_Chrome_go9vhu.jpg" />
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
 
-  <!-- ===== Font Awesome (pou icons social) ===== -->
-  <!-- Si w itilize offline oubyen CSP restriksyon, telechaje fontawesome epi sere lokalman -->
+  <!-- Font Awesome (optional) -->
   <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <style>
     :root{
@@ -509,25 +512,28 @@
       }
     }
 
+    // ===========================
+    // displaySocialLinks (SVG fallback)
+    // ===========================
     function displaySocialLinks(){
       const c = document.getElementById("explorerView"),
             s = document.createElement("div");
       s.className = "social-section";
       s.innerHTML = `
         <a href="https://www.facebook.com/profile.php?id=61578852256333" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
-          <i class="fab fa-facebook-f" aria-hidden="true"></i>
+          <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07c0 4.99 3.66 9.13 8.44 9.93v-7.03H8.08v-2.9h2.36V9.41c0-2.33 1.39-3.62 3.51-3.62.99 0 2.03.18 2.03.18v2.23h-1.14c-1.12 0-1.47.7-1.47 1.42v1.7h2.5l-.4 2.9h-2.1v7.03C18.34 21.2 22 17.06 22 12.07z"/></svg>
         </a>
         <a href="mailto:dhaitiadam@gmail.com" rel="noopener noreferrer" aria-label="Mail">
-          <i class="fas fa-envelope" aria-hidden="true"></i>
+          <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5L4 8V6l8 5 8-5v2z"/></svg>
         </a>
-        <a href="https://whatsapp.com/channel/0029Vb6WLps7oQhWrUlyPQ2m" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        <a href="https://wa.me/" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp">
+          <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.472-.149-.672.15-.198.297-.768.966-.942 1.164-.173.198-.347.223-.644.075-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.447-.52.149-.173.198-.298.298-.497.099-.198.05-.372-.025-.52-.075-.149-.672-1.611-.921-2.206-.242-.579-.487-.5-.672-.51l-.573-.01c-.198 0-.52.074-.792.372-.273.298-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487  .709.306 1.262.489 1.694.627.712.227 1.36.195 1.872.118.571-.085 1.758-.718 2.006-1.41.248-.693.248-1.287.173-1.41-.074-.123-.272-.198-.57-.347z"/></svg>
         </a>
         <a href="https://www.instagram.com/adam_dhaiti/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
-          <i class="fab fa-instagram" aria-hidden="true"></i>
+          <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zM12 7.5A4.5 4.5 0 1012 16.5 4.5 4.5 0 0012 7.5zm0 2a2.5 2.5 0 110 5 2.5 2.5 0 010-5zM17.8 6.2a.9.9 0 11-1.8 0 .9.9 0 011.8 0z"/></svg>
         </a>
         <a href="https://youtube.com/@adam_dhaiti?si=f_29jvZi6c1mJaBO" target="_blank" rel="noopener noreferrer" aria-label="YouTube">
-          <i class="fab fa-youtube" aria-hidden="true"></i>
+          <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M23.498 6.186A3.003 3.003 0 0021.405 4.1C19.547 3.6 12 3.6 12 3.6s-7.547 0-9.405.5A3.003 3.003 0 00.501 6.186C0 8.047 0 12 0 12s0 3.953.501 5.814A3.003 3.003 0 002.595 19.9C4.453 20.4 12 20.4 12 20.4s7.547 0 9.405-.5a3.003 3.003 0 002.095-1.586C24 15.953 24 12 24 12s0-3.953-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
         </a>
       `;
       const exists = Array.from(document.getElementsByClassName('social-section')).length;
@@ -539,8 +545,8 @@
     };
   </script>
 
-  <!-- Adstera / social script (ou te mande pou ajoute) -->
-  <script type='text/javascript' src='//pantherinvincible.com/1d/e3/21/1de321cf7681c76a64e7cdb2ab95a037.js'></script>
+  <!-- Adstera / social script (optional) -->
+  <script type="text/javascript" src="//pantherinvincible.com/1d/e3/21/1de321cf7681c76a64e7cdb2ab95a037.js"></script>
 
   <!-- SERVICE WORKER REGISTRATION + UPDATE BANNER -->
   <script>
@@ -622,6 +628,6 @@
     }
   </script>
 
-  <!-- existing simple registration removed (replaced by above) -->
+  <!-- end -->
 </body>
-    </html>
+  </html>
